updated .gitignore and added instreuctions to references folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # =========================
 # NetBeans specific files to ignore
 # =========================
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+*/nbproject/private/
+*/build/
+*/nbbuild/
+*/dist/
+*/nbdist/
+*/nbactions.xml
+*/nb-configuration.xml
 
 # Class Files #
 *.class
