--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # =========================
 # NetBeans specific files to ignore
 # =========================
-*/nbproject/private/
+!*/nbproject/project.properties
+!*/nbproject/project.xml
 */build/
 */nbbuild/
 */dist/
@@ -73,4 +74,3 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-/CSCI446_Project1_GraphColoring/nbproject/private/
