--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 */nbactions.xml
 */nb-configuration.xml
 */nbproject/private/private.properties
+*/nbproject/private/private.xml
 
 
 # Class Files #
