--- a/CSCI446_Project2_WumpusWorld/nbproject/project.properties
+++ b/CSCI446_Project2_WumpusWorld/nbproject/project.properties
@@ -35,6 +35,7 @@ javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -55,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=WumpusWorld.TempMain_David
+main.class=WumpusWorld.TempMain_James
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
