--- a/CSCI446_Project2_WumpusWorld/nbproject/project.properties
+++ b/CSCI446_Project2_WumpusWorld/nbproject/project.properties
@@ -29,9 +29,15 @@ dist.jar=${dist.dir}/CSCI446_Project2_WumpusWorld.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.cloning-1.9.3-sources.jar=libraries\\cloning-1.9.3\\cloning-1.9.3-sources.jar
+file.reference.cloning-1.9.3.jar=libraries\\cloning-1.9.3\\cloning-1.9.3.jar
+file.reference.objenesis-2.1.jar=libraries\\cloning-1.9.3\\lib\\objenesis-2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.objenesis-2.1.jar}:\
+    ${file.reference.cloning-1.9.3-sources.jar}:\
+    ${file.reference.cloning-1.9.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
