--- a/CSCI446_Project2_WumpusWorld/nbproject/project.properties
+++ b/CSCI446_Project2_WumpusWorld/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=WumpusWorld.TempMain_James
+main.class=WumpusWorld.TempMain_David
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
