--- a/Classification/nbproject/project.properties
+++ b/Classification/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CSCI446_Project1_GraphColoring
-application.vendor=amyleister
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,30 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CSCI446_Project1_GraphColoring.jar
+dist.jar=${dist.dir}/Classification.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-<<<<<<< HEAD
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.libraries-cloning-1.9.3}
-=======
-file.reference.cloning-1.9.3-sources.jar=libraries\\cloning-1.9.3\\cloning-1.9.3-sources.jar
-file.reference.cloning-1.9.3.jar=libraries\\cloning-1.9.3\\cloning-1.9.3.jar
-file.reference.objenesis-2.1.jar=libraries\\cloning-1.9.3\\lib\\objenesis-2.1.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.cloning-1.9.3.jar}:\
-    ${file.reference.cloning-1.9.3-sources.jar}:\
-    ${file.reference.objenesis-2.1.jar}
->>>>>>> 8a76a81c0f13d3fb06f35646a88703f7584a79be
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -69,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=GraphColoring.Driver
+main.class=classification.Driver
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
