--- a/Classification/nbproject/project.properties
+++ b/Classification/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Classification.jar
+dist.jar=${dist.dir}/CSCI446_Project3_Classification.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
