--- a/Classification/build.xml
+++ b/Classification/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Classification" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Classification.</description>
+<project name="CSCI446_Project3_Classification" default="default" basedir=".">
+    <description>Builds, tests, and runs the project CSCI446_Project3_Classification.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Classification-impl.jar">
+        <target name="run" depends="CSCI446_Project3_Classification-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
