--- a/CSCI446_Project3_MLClassification/nbproject/project.properties
+++ b/CSCI446_Project3_MLClassification/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=classification.Temp_Discretizer
+main.class=classification.Driver
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
