Cleaned up console output for ID3

--- a/CSCI446_Project3_MLClassification/nbproject/project.properties
+++ b/CSCI446_Project3_MLClassification/nbproject/project.properties
@@ -2,12 +2,17 @@
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 javac.external.vm=true
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.8
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -21,7 +26,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=classification.Driver_Rice
+main.class=classification.Driver
 dist.jar=${dist.dir}/CSCI446_Project3_Classification.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
@@ -42,8 +47,7 @@ jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.junit_4.classpath}
 javadoc.private=false
 annotation.processing.run.all.processors=true
 application.title=CSCI446_Project3_Classification
