add interface so we can enforce needed methods

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /CSCI446_Project3_MLClassification/nbproject/private/
+/CSCI446_Project4_Racetrack/nbproject/private/
